--- a/profile-webpage/src/App.css
+++ b/profile-webpage/src/App.css
@@ -1,3 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Teko:wght@300..700&display=swap');
+
+:root {
+  --bg-color: #081b29;
+  --second-bg-color: #112e42;
+  --text-color: #ededed;
+  --main-color: #00abf0;
+}
+
 .App {
   text-align: center;
 }
@@ -13,18 +24,27 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: var(--bg-color);
+}
+
+.base-container {
+  background-color: var(--second-bg-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-color);
+  font-family: "Poppins", sans-serif;
 }
 
-.App-link {
+.App-header {
+  font-size: calc(10px + 3.5vmin);
+}
+
+.App-link, .contact-options a, .contact-options span  {
   color: #61dafb;
 }
 
