--- a/profile-webpage/src/App.css
+++ b/profile-webpage/src/App.css
@@ -4,6 +4,7 @@
 
 :root {
   --bg-color: #081b29;
+  --shadow-color: #04121b;
   --second-bg-color: #112e42;
   --text-color: #ededed;
   --main-color: #00abf0;
@@ -24,25 +25,54 @@
   }
 }
 
-body {
+body, .empty-container {
   background-color: var(--bg-color);
 }
 
-.base-container {
+.empty-container {
+  align-items: center;
+  justify-content: center;
+}
+
+.empty-container .list-group-item {
+  background-color: var(--bg-color);
+  color: #00abf0;
+  font-size: calc(10px + 1vmin);
+  border-style: none;
+}
+
+.nav-links-container {
+  height: 7.5vh;
+  box-sizing: border-box;
+  padding-bottom: 2px;
+  padding-left: 2px;
+}
+
+.App-header {
+  font-size: calc(10px + 3.5vmin);
+}
+
+.main-container {
   background-color: var(--second-bg-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: var(--text-color);
   font-family: "Poppins", sans-serif;
 }
 
-.App-header {
-  font-size: calc(10px + 3.5vmin);
+/* .github {
+  justify-content: right;
+  align-items: right;
 }
+
+.linkedin {
+  justify-content: left;
+  align-items: left;
+} */
 
 .App-link, .contact-options a, .contact-options span  {
   color: #61dafb;
